--- a/AspNetStack/.NET 4.5/packages/repositories.config
+++ b/AspNetStack/.NET 4.5/packages/repositories.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\..\..\..\..\..\Documents\Visual Studio 2013\Projects\AspNetStack\AspNetStack.Tests\packages.config" />
+  <repository path="..\AspNetStack.Tests\packages.config" />
   <repository path="..\AspNetStack\packages.config" />
 </repositories>
