--- a/AspNetStack/.NET 4.5/AspNetStack/packages.config
+++ b/AspNetStack/.NET 4.5/AspNetStack/packages.config
@@ -7,14 +7,14 @@
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="1.0.0-alpha1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="1.0.0-alpha1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="5.0.0-beta1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.0.0-beta1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.0.0-beta1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0-beta1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0-beta1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0-beta1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.0.0-beta1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.0.0-beta1" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.0.0-beta1" targetFramework="net45" />
   <package id="Microsoft.Owin" version="1.1.0-beta1" targetFramework="net45" />
