--- a/AspNetStack/.NET 4.5/AspNetStack/AspNetStack.csproj
+++ b/AspNetStack/.NET 4.5/AspNetStack/AspNetStack.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Contact.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\WebStackDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
