--- a/AspNetStack/.NET 4.5/AspNetStack/AspNetStack.csproj
+++ b/AspNetStack/.NET 4.5/AspNetStack/AspNetStack.csproj
@@ -169,6 +169,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201310180432245_Initialize.cs" />
+    <Compile Include="Migrations\201310180432245_Initialize.Designer.cs">
+      <DependentUpon>201310180432245_Initialize.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Contact.cs" />
@@ -287,6 +291,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201310180432245_Initialize.resx">
+      <DependentUpon>201310180432245_Initialize.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
