--- a/AspNetStack/.NET 4.5/AspNetStack/packages.config
+++ b/AspNetStack/.NET 4.5/AspNetStack/packages.config
@@ -5,6 +5,7 @@
   <package id="jQuery" version="1.8.2" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net45" />
+  <package id="knockoutjs" version="2.3.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="1.0.0-alpha1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="1.0.0-alpha1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net45" />
