--- a/AspNetStack/.NET 4.5/AspNetStack/packages.config
+++ b/AspNetStack/.NET 4.5/AspNetStack/packages.config
@@ -3,6 +3,7 @@
   <package id="angularjs" version="1.2.0-RC2" targetFramework="net45" />
   <package id="bootstrap" version="2.3.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.0-beta1" targetFramework="net45" />
+  <package id="JasmineTest" version="1.3.1" targetFramework="net45" />
   <package id="jQuery" version="1.8.2" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net45" />
