--- a/AspNetStack/.NET 4.5/AspNetStack/packages.config
+++ b/AspNetStack/.NET 4.5/AspNetStack/packages.config
@@ -32,5 +32,6 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="SinonJS" version="1.7.3" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
