--- a/AspNet/AspNetStack/packages.config
+++ b/AspNet/AspNetStack/packages.config
@@ -2,14 +2,15 @@
 <packages>
   <package id="angularjs" version="1.2.0-RC2" targetFramework="net45" />
   <package id="bootstrap" version="2.3.1" targetFramework="net45" />
-  <package id="EntityFramework" version="6.0.0-beta1" targetFramework="net45" />
+  <package id="EntityFramework" version="6.0.1" targetFramework="net45" />
+  <package id="EntityFramework.SqlServerCompact" version="6.0.1" targetFramework="net45" />
   <package id="JasmineTest" version="1.3.1" targetFramework="net45" />
   <package id="jQuery" version="1.8.2" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net45" />
   <package id="knockoutjs" version="2.3.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.Core" version="1.0.0-alpha1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.EntityFramework" version="1.0.0-alpha1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Core" version="1.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.0" targetFramework="net45" />
@@ -28,10 +29,12 @@
   <package id="Microsoft.Owin.Security.Google" version="1.1.0-beta1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.MicrosoftAccount" version="1.1.0-beta1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Twitter" version="1.1.0-beta1" targetFramework="net45" />
+  <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="SinonJS" version="1.7.3" targetFramework="net45" />
+  <package id="SqlServerCompact" version="4.0.8854.1" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
